syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/Ian-Balijawa/simplebank/pb";

message GetAccountLimitRequest {
    int64 account_id = 1;
}

message GetAccountLimitResponse {
    AccountLimit limit = 1;
}

message UpsertAccountLimitRequest {
    int64 account_id = 1;
    int64 daily_transfer_limit = 2;
}

message UpsertAccountLimitResponse {
    AccountLimit limit = 1;
}
